--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@
   font-display: swap;
 }
 
+
 html {
   height: 100%;
 }
@@ -56,6 +57,10 @@ body {
   box-sizing: border-box;
 }
 
+.images-block {
+  display: block;
+}
+
 .container {
   width: 1160px;
   margin: 0 auto;
@@ -67,6 +72,10 @@ body {
   padding: 0 60px;
   position: relative;
   margin-top: 40px;
+}
+
+.page-header-catalog {
+  padding-bottom: 22px;
 }
 
 /*Хедер*/
@@ -151,7 +160,7 @@ body {
   position: relative;
   flex-shrink: 0;
   display: inline-block;
-  padding: 10px 56px;
+  padding: 8px 53px;
   min-width: 50px;
   cursor: pointer;
   height: 40px;
@@ -211,15 +220,187 @@ body {
   margin-right: auto;
 }
 
-.user-menu-item:nth-child(2) {
-  margin-right: 18px;
+.user-menu-item {
+  margin-left: 18px;
 }
 
-.user-menu-link {
+/*Поповер корзины товаров*/
+.cart-popover {
+  position: absolute;
+  top: 36px;
+  left: -123px;
+  z-index: 1;
+  width: 320px;
+  color: #ffffff;
+  background-color: #000000;
+  display: none;
+}
+
+.user-menu-wrap:focus + .cart-popover,
+.user-menu-wrap:active + .cart-popover {
+  display: block;
+}
+
+.cart-popover-open {
+  display: block;
+}
+
+.cart-popover::before {
+  position: absolute;
+  content: "";
+  top: -5px;
+  left: 153px;
+  width: 9px;
+  height: 14px;
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.cart-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.cart-item {
+  display: flex;
+  padding: 20px;
+  color: #ffffff;
+}
+
+.cart-link {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  line-height: 20px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.cart-image {
+  margin-right: 23px;
+  object-fit: contain;
+}
+
+.cart-descriptor {
+  margin: 0;
+  padding: 0;
+}
+
+.cart-close {
+  position: relative;
+  align-self: flex-start;
+  margin-left: auto;
+  padding: 0;
+  width: 12px;
+  height: 12px;
+  border: none;
+  background-color: #000000;
+  cursor: pointer;
+}
+
+.cart-close::before,
+.cart-close::after {
+  position: absolute;
+  content: "";
+  top: 5px;
+  right: 0;
+  height: 2px;
+  width: 14px;
+  background-color: #ffffff;
+}
+
+.cart-close::before {
+  transform: rotate(45deg);
+}
+
+.cart-close::after {
+  transform: rotate(-45deg);
+}
+
+.cart-link:hover,
+.cart-close:hover {
+  opacity: 0.6;
+}
+
+.cart-link:focus,
+.cart-close:focus {
+  outline: 2px solid #af4fff;
+  outline-offset: 3px;
+}
+
+.cart-link:active,
+.cart-close:active {
+  opacity: 0.3;
+}
+
+.cart-item + .cart-item {
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.cart-wrap {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 20px;
+  background-color: #1a1a1a;
+}
+
+.cart-item-title,
+.cart-item-price {
+  margin: 0;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.cart-open-link {
+  font-family: "Raleway", sans-serif;
+  display: block;
+  padding: 15px;
+  margin: 20px;
+  font-size: 18px;
+  line-height: 21px;
+  font-weight: 800;
+  letter-spacing: 0.2em;
+  text-decoration: none;
+  text-transform: uppercase;
+  text-align: center;
+  color: #000000;
+  background-color: #ffffff;
+}
+
+.cart-open-link:hover {
+  background-color: #ffe17f;
+}
+
+.cart-open-link:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.cart-open-link:focus {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
+
+/*Поповер корзины закончился*/
+
+.user-menu-wrap {
   display: block;
   text-decoration: none;
   color: #000000;
   cursor: pointer;
+}
+
+.user-menu-wrap:hover {
+  opacity: 0.6;
+}
+
+.user-menu-wrap:active {
+  opacity: 0.3;
+}
+
+.user-menu-wrap:focus {
+  outline: 3px solid #af4fff;
+  z-index: 2;
 }
 
 .catalogue-wrapper {
@@ -235,7 +416,7 @@ body {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  width: 476px;
+  width: 472px;
 }
 
 .navigation-menu-item:not(:last-child) {
@@ -259,6 +440,13 @@ body {
 .sort-link {
   padding-left: 25px;
   background: no-repeat 4px 10px url("../images/icons/sort.svg");
+}
+
+.user-menu-link {
+  display: block;
+  text-decoration: none;
+  color: #000000;
+  cursor: pointer;
 }
 
 .user-menu-link:hover {
@@ -313,6 +501,10 @@ body {
 
 .navigation-link:focus {
   outline: 2px solid #af4fff;
+}
+
+.user-menu-exit {
+  color: rgba(0, 0, 0, 0.3);
 }
 
 /*Поповер*/
@@ -422,8 +614,8 @@ body {
 
 .search-input {
   font-family: "Rubik", sans-serif;
-  font-size: 18px;
-  line-height: 30px;
+  font-size: 16px;
+  line-height: 20px;
   font-weight: 400;
   font-style: normal;
   color: #000000;
@@ -451,10 +643,9 @@ body {
   text-transform: uppercase;
   width: 293px;
   border: none;
-  padding: 15px 57px 15px 0;
+  padding: 15px 66px 15px 0;
 
   cursor: pointer;
-  z-index: 2;
 }
 
 .navigation-link {
@@ -625,7 +816,6 @@ body {
 
 .slider-product {
   display: flex;
-  flex-direction: row;
   margin-top: -15px;
 }
 
@@ -640,6 +830,7 @@ body {
 
 .features-list {
   display: flex;
+  margin: 0;
 }
 
 .features-def {
@@ -686,7 +877,7 @@ body {
 .slider_number {
   position: absolute;
   content: "";
-  top: -92px;
+  top: -100px;
   right: 49px;
   z-index: -1;
   font-size: 180px;
@@ -714,7 +905,7 @@ body {
 
 /*Категории товаров*/
 .product-category {
-  margin-bottom: 134px;
+  margin-bottom: 180px;
 }
 
 .products-list {
@@ -802,21 +993,23 @@ body {
 /*Преимущества*/
 .advantages {
   background-color: #F0F0F0;
+  height: 292px;
+  margin-bottom: 70px;
 }
 
 .advantages-wrapper {
   display: flex;
   align-items: center;
-  margin-bottom: 70px;
   position: relative;
-  width: 1160px;
-  padding-bottom: 150px;
-  position: relative;
+  top: -102px;
 }
 
 .advantages-button-wrapper {
   width: 287px;
   position: relative;
+  padding-top: 64px;
+  padding-bottom: 64px;
+  border-right: 7px solid #000000;
 }
 
 .advantages-description {
@@ -827,29 +1020,25 @@ body {
 .delivery-advantages-item {
   position: relative;
   background-image: url("../images/advantages/delivery-1.svg");
-  background-repeat: no-repeat;
-  height: 164px;
-  background-position: right;
+  min-height: 164px;
 }
 
 .warranty-advantages-item {
   background-image: url("../images/advantages/warranty-2.svg");
-  background-repeat: no-repeat;
-  height: 195px;
-  background-position: right;
+  min-height: 156px;
 }
 
 .credit-advantages-item {
   background-image: url("../images/advantages/credit-3.svg");
-  background-repeat: no-repeat;
-  height: 188px;
-  background-position: right;
+  min-height: 188px;
 }
 
 .advantages-item {
-  margin-left: 118px;
-  padding-right: 214px;
+  margin-left: 116px;
+  margin-right: 63px;
   position: relative;
+  background-repeat: no-repeat;
+  background-position: right center;
 }
 
 .advantages-list {
@@ -857,14 +1046,19 @@ body {
   padding: 0;
   list-style: none;
   position: relative;
+  flex-grow: 1;
 }
 /*Заканчиваются флекс-преимущества*/
 
 .advantages-item-button {
-  padding-right: 120px;
-  width: 280px;
+  width: 100%;
+  text-align: left;
   border: none;
   cursor: pointer;
+}
+
+.advantages-item-button:focus {
+  outline: 2px solid #af4fff;
 }
 
 .advantages-item-button:not(:last-child) {
@@ -872,7 +1066,6 @@ body {
 }
 
 .advantages-subtitle {
-  background-color: #F0F0F0;
   margin-bottom: 34px;
 }
 
@@ -905,22 +1098,11 @@ body {
   width: 160px;
 }
 
-.advantages-item-button::before {
-  content: "";
-  position: absolute;
-  top: -62px;
-  left: 280px;
-  z-index: 2;
-  width: 7px;
-  height: 319px;
-  background: #000000;
-}
-
 /*Спец-предложение по доставке*/
 .scarce-commodity {
   position: relative;
   background-color: #F0F0F0;
-  margin-bottom: 70px;
+  margin-bottom: 117px;
 }
 /*Заканчивается флекс*/
 
@@ -928,12 +1110,13 @@ body {
   position: relative;
   font-family: "Raleway", sans-serif;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 20px;
   font-weight: 800;
   color: #000000;
   letter-spacing: 0.2em;
   text-decoration: none;
   text-align: center;
+  text-transform: uppercase;
 
   display: block;
   padding: 40px 125px;
@@ -947,9 +1130,9 @@ body {
   top: 0;
 
   width: 125px;
-  height: 100px;
+  height: 100%;
   transition: all 0.3s ease 0s;
-  background: #ffe17f no-repeat 39px 34px url(../images/icons/delivery.svg);
+  background: #ffe17f no-repeat center url(../images/icons/delivery.svg);
 }
 
 .delivery-special-offer:active {
@@ -964,20 +1147,21 @@ body {
   opacity: 1;
 }
 
-.delivery-link:focus {
+.delivery-special-offer:focus {
   outline: 2px solid #af4fff;
 }
 
 .delivery-special-offer::after {
   content: "";
   position: absolute;
-  top: 30px;
+  top: 50%;
+  transform: translateY(-50%);
   right: 43px;
 
   width: 40px;
   height: 40px;
   transition: all 0.3s ease 0s;
-  background: #dcdcdc no-repeat 19px 14px url("../images/icons/i.svg");
+  background: #dcdcdc no-repeat center url("../images/icons/i.svg");
   border-radius: 50%;
   opacity: 0.3;
 }
@@ -1001,6 +1185,7 @@ body {
   padding: 0;
   margin: 0;
   margin-bottom: 30px;
+  list-style-type: none;
 }
 
 .companies-item {
@@ -1008,22 +1193,28 @@ body {
   font-weight: 700;
   color: #000000;
   letter-spacing: -0.02em;
-
-  padding-left: 36px;
+  display: flex;
+  align-items: center;
 }
 
 .companies-item:not(:last-child) {
   margin-bottom: 19px;
 }
 
-.companies-item::marker {
-  color: #FFC700;
+.companies-item::before {
+  display: block;
+  content: "";
+  background-color: #FFC700;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  margin-right: 26px;
 }
 
 .contacts-schedule {
   list-style: none;
   padding: 0;
-
+  margin: 0;
   margin-bottom: 30px;
 }
 
@@ -1041,7 +1232,7 @@ body {
 .contacts::before {
   position: absolute;
   content: "";
-  top: 0;
+  top: -50px;
   left: 0;
   width: 84px;
   height: 7px;
@@ -1058,15 +1249,19 @@ body {
 /*Заканчиваются флекс-о-нас*/
 
 .companies-title {
-  margin-top: 48px;
   margin-bottom: 48px;
 }
 
 .companies-description {
+  margin: 0;
   margin-bottom: 30px;
 }
 
 .contacts-description {
+  margin-bottom: 30px;
+}
+
+.contacts-address {
   margin-bottom: 30px;
 }
 
@@ -1077,12 +1272,14 @@ body {
 .contacts-subtitle {
   font-size: 24px;
   font-weight: 700;
-
+  margin: 0;
   margin-bottom: 15px;
 }
 
 .contacts-address-text {
   font-style: normal;
+  margin: 0;
+  display: block;
 }
 
 .contacts-phone {
@@ -1137,8 +1334,8 @@ body {
   position: relative;
   flex-shrink: 0;
   display: inline-block;
-  padding: 18px 40px;
-  min-width: 50px;
+  padding: 15px 37px;
+  width: 253px;
   cursor: pointer;
 }
 
@@ -1201,7 +1398,7 @@ body {
   outline: none;
 }
 
-.email-input:invalid {
+.email-input:focus:invalid {
   border-bottom-color: #ff3d3d;
 }
 
@@ -1232,11 +1429,12 @@ body {
 }
 
 .logo-yellow{
-  display: inline-block;
+  display: block;
 }
 
 .logo-yellow-link {
-  display: inline-block;
+  display: block;
+  width: 145px;
   margin-bottom: 35px;
 }
 
@@ -1258,7 +1456,7 @@ body {
 
 .footer-address-wrapper {
   width: 240px;
-  margin-right: 120px;
+  margin-right: 115px;
   position: relative;
 }
 
@@ -1548,20 +1746,10 @@ body {
 .catalog-filter-group{
   display: block;
   padding: 0;
+  padding-right: 20px;
   margin: 0;
   margin-bottom: 35px;
   border: none;
-}
-
-.catalog-filter-title {
-  width: 100%;
-  padding: 0;
-  padding-top: 12px;
-  border-top: 2px solid #000000;
-  margin-bottom: 20px;
-  line-height: 20px;
-  font-weight: 700;
-  letter-spacing: -0.02em;
 }
 
 .range-scale {
@@ -1759,7 +1947,7 @@ body {
 
 .catalog-container {
   width: 320px;
-  padding: 0 60px;
+  padding: 0 40px 0 60px;
 }
 
 .catalog-right-column {
@@ -1773,29 +1961,31 @@ body {
   gap: 44px 40px;
   list-style: none;
   margin-top: 0;
-  margin-bottom: 44px;
+  margin-bottom: 35px;
   padding: 70px 40px 0;
 }
 
 .product-card {
   position: relative;
-  list-style-type: none;
 }
 
-.product-card-button {
+.product-card-new::before {
   position: absolute;
-  box-sizing: border-box;
-  width: 220px;
-  top: 180px;
-  left: 75px;
-}
-
-.product-card:hover .product-card-button {
-  opacity: 1;
-}
-
-.product-card:focus {
-  outline: 2px solid #af4fff;
+  content: "new";
+  z-index: 1;
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 60px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  border: 2px solid rgba(0, 0, 0, 0.6);
+  border-radius: 50%;
+  top:27px;
+  right: 27px;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .product-card-image {
@@ -1809,7 +1999,6 @@ body {
 .card-price-wrapper {
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 /*Заканчивются флексы-товары*/
 
@@ -1827,7 +2016,7 @@ body {
 
 .filter {
   display: block;
-  margin-bottom: 60px;
+  margin-bottom: 55px;
   padding-top: 5px;
 }
 
@@ -1837,6 +2026,17 @@ body {
   line-height: 20px;
   font-weight: 700;
   color: #000000;
+
+  width: 100%;
+  padding: 0;
+  padding-top: 12px;
+  border-top: 2px solid #000000;
+  margin-bottom: 20px;
+  letter-spacing: -0.02em;
+}
+
+.catalog-range {
+  margin-bottom: 28px;
 }
 
 .control {
@@ -1905,22 +2105,6 @@ body {
   background-position: right 10px center;
 }
 
-/*.sorting-wrap {*/
-/*  position: relative;*/
-/*}*/
-
-/*.sorting-wrap::after {*/
-/*  content: "";*/
-/*  position: absolute;*/
-/*  width: 30px;*/
-/*  height: 30px;*/
-/*  top: 12px;*/
-/*  right: 11px;*/
-/*  background-image: url("../images/icons/arrow-down.svg");*/
-/*  background-repeat: no-repeat;*/
-/*  background-size: contain;*/
-/*}*/
-
 .select-control:hover {
   opacity: 0.6;
 }
@@ -1939,20 +2123,63 @@ body {
 }
 
 .product-card-link {
+  display: block;
+  position: relative;
   text-decoration: none;
 }
 
+.product-card-button {
+  position: absolute;
+  content: "";
+  top: 170px;
+  left: 109px;
+  z-index: 1;
+}
+
+.product-card-link:hover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.6);
+  z-index: 1;
+}
+
+.product-card-link:active::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(255, 255, 255, 0.6);
+  z-index: 1;
+}
+
+.product-card-link:focus::before {
+  outline: 2px solid #af4fff;
+}
+
 .product-card-title {
+  display: block;
   font-size: 18px;
   line-height: 20px;
   font-weight: 700;
   color: #000000;
   letter-spacing: -0.02em;
+  text-decoration: none;
+  margin: 0;
 }
 
 .product-card-price {
+  display: block;
+  font-size: 18px;
   line-height: 21px;
   text-align: right;
+  color: #444444;
+  margin: 0;
 }
 
 .pagination-show-more {
@@ -2073,3 +2300,298 @@ body {
   outline: 2px solid #af4fff;
 }
 
+/*Модальное окно*/
+
+.modal-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(240, 240, 240, 0.9);
+  z-index: 1;
+}
+
+.modal {
+  position: relative;
+  margin: auto;
+  padding: 62px 70px;
+  width: 920px;
+  box-sizing: border-box;
+
+  color: #000000;
+  background-color: #ffffff;
+  border: 10px solid #000000;
+  box-shadow: 0 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.modal-container-close {
+  display: none;
+}
+
+.modal-title {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+  color: #000000;
+  margin: 0;
+  margin-bottom: 42px;
+}
+
+.auth-form .field-group {
+  margin: 0;
+}
+
+.modal-close-button {
+  position: absolute;
+  padding: 0;
+  top: 78px;
+  right: 70px;
+  width: 26px;
+  height: 26px;
+  border: none;
+  background: no-repeat center #ffffff url("../images/icons/cross.svg");
+  cursor: pointer;
+}
+
+.modal-close-button:hover {
+  opacity: 0.6;
+}
+
+.modal-close-button:active {
+  opacity: 0.3;
+}
+
+.modal-close-button:focus {
+  outline: 2px solid #af4fff;
+}
+
+.auth-form {
+  display: grid;
+  grid-template-columns: 360px 140px 180px;
+  gap: 42px 40px;
+}
+
+.field-group {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+}
+
+.modal-label {
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: -0.02em;
+  margin-bottom: 14px;
+}
+
+.modal-input{
+  position: relative;
+  width: 100%;
+  padding: 20px;
+  font-size: 16px;
+  line-height: 20px;
+  border: none;
+  background-color: #f0f0f0;
+  color: #000000;
+}
+
+.modal-input::placeholder {
+  font-size: 16px;
+  line-height: 20px;
+  color: #000000;
+  opacity: 0.3;
+}
+
+.name {
+  grid-column: 1 / 2;
+}
+
+.email {
+  grid-column: 2 / 4;
+}
+
+.delivery-group {
+  grid-column: 1 / 3;
+}
+
+.modal-icon {
+  position: relative;
+}
+
+.number-tooltip {
+  position: absolute;
+  content: "";
+  width: 26px;
+  height: 26px;
+  margin-left: 8px;
+  margin-top: -3px;
+  border: none;
+  border-radius: 50%;
+  background: no-repeat center #ffe17f url("../images/icons/i.svg");
+}
+
+.number-tooltip:focus::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+}
+
+.number-tooltip:hover + .tooltip-text,
+.number-tooltip:focus + .tooltip-text {
+  display: block;
+}
+
+.tooltip-text {
+  display: none;
+  position: absolute;
+  box-sizing: border-box;
+  top: 33px;
+  left: -20px;
+  width: 200px;
+  padding: 20px 18px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 400;
+  background-color: #000000;
+  color: #ffffff;
+  z-index: 2;
+}
+
+.tooltip-text::before {
+  content: "";
+  position: absolute;
+  width: 9px;
+  height: 14px;
+  top: -6px;
+  right: 44px;
+  background-color: #000000;
+  transform: rotate(45deg);
+}
+
+.modal-button-wrapper {
+  position: relative;
+}
+
+.amount-product {
+  position: absolute;
+  padding: 0;
+  width: 60px;
+  height: 60px;
+  background-color: #f0f0f0;
+  border: none;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.amount-product::before {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 2px;
+  top: 29px;
+  left: 22px;
+  background-color: #000000;
+}
+
+.amount-product-less {
+  top: 0;
+  left: 0;
+  order: -1;
+}
+
+.amount-product-more {
+  top: 0;
+  right: 0;
+}
+
+.amount-product-more::after {
+  content: "";
+  position: absolute;
+  width: 16px;
+  height: 2px;
+  top: 29px;
+  left: 22px;
+  background-color: #000000;
+  transform: rotate(90deg);
+}
+
+.amount-product:hover::before,
+.amount-product:hover::after {
+  opacity: 0.6;
+}
+
+.amount-product:active::before,
+.amount-product:active::after {
+  opacity: 0.3;
+}
+
+.amount-product:focus {
+  outline: 2px solid #af4fff;
+  z-index: 1;
+}
+
+.amount-product:disabled {
+  opacity: 0.1;
+}
+
+.input-number {
+  width: 180px;
+  text-align: center;
+  margin: 0;
+  appearance: none;
+}
+
+.modal-input:hover {
+  background-color: #dcdcdc;
+}
+
+.modal-input:focus {
+  outline: 2px solid #af4fff;
+  outline-offset: 2px;
+  z-index: 1;
+}
+
+.modal-input.invalid {
+  outline: 2px solid #ff3d3d;
+  outline-offset: -2px;
+}
+
+.modal-input:disabled {
+  opacity: 0.1;
+}
+
+.modal-input.invalid + .modal-help {
+  color: #ff3d3d;
+}
+
+.modal-submit {
+  width: 200px;
+  border: none;
+}
+
+.modal-help {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.input-name {
+  padding-right: 55px;
+  background-image: url("../images/icons/login.svg");
+  background-repeat: no-repeat;
+  background-position: 325px 24px;
+}
+
+.input-email {
+  padding-right: 55px;
+  background-image: url("../images/icons/letter.svg");
+  background-repeat: no-repeat;
+  background-position: 325px 24px;
+}
